--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: always
     volumes:
       - db:/var/lib/mysql:Z
-#      - ./mariadb/init/:/docker-entrypoint-initdb.d/:ro
+      - ./mariadb/init/:/docker-entrypoint-initdb.d/:ro
       - ./mariadb/conf/:/etc/mysql/conf.d/:ro
     environment:
       - MARIADB_ROOT_PASSWORD=password
