--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 ---
-version: '3.8'
 networks:
   mynetwork:
     name: "pmacontrol-net"
@@ -34,6 +33,8 @@ services:
     restart: always
     volumes:
       - config:/configuration
+      - tmpdb:/data/tmp/database
+      - tmplog:/data/tmp/log
     environment:
       - PMACONTROL_DB_HOST=mariadb
       - PMACONTROL_DB_USER=root
@@ -48,3 +49,5 @@ services:
 volumes:
   db:
   config:
+  tmpdb:
+  tmplog:
