--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       dockerfile: mariadb/Dockerfile
     restart: always
     volumes:
-      - db:/var/lib/mysql:Z
+      - db:/var/lib/mysql
       - ./mariadb/conf/:/etc/mysql/conf.d/:ro
     environment:
       - MARIADB_ROOT_PASSWORD=password
