--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,16 @@ services:
     profiles:
       - db
       - pmacontrol
+    healthcheck:
+      test: ["CMD", "mariadb-admin" ,"ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 10
 
   pmacontrol:
     container_name: "pmacontrol"
     depends_on:
       mariadb:
-        condition: service_started
+        condition: service_healthy
     build:
       context: .
       dockerfile: pmacontrol/Dockerfile
