change conf mariadb + sysbench

--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -1,5 +1,10 @@
 FROM mariadb:10.11
 
+# Activer le plugin disk
+RUN echo "[mysqld]" >> /etc/mysql/mariadb.conf.d/50-disk.cnf \
+    && echo "plugin-load-add=disk" >> /etc/mysql/mariadb.conf.d/50-disk.cnf
+
+
 RUN apt-get update -qq && \
     apt-get install -qy \
     mariadb-plugin-rocksdb && \
