--- a/mariadb/conf/my.cnf
+++ b/mariadb/conf/my.cnf
@@ -1,16 +1,25 @@
+[mysqld]
+
+default_storage_engine  = InnoDB
+
+# InnoDB
 innodb_autoextend_increment = 1000
-innodb_strict_mode=0
+innodb_strict_mode=1
+innodb_rollback_on_timeout=1
+innodb_log_buffer_size  = 8M
+innodb_file_per_table   = 1
+innodb_open_files       = 400
+innodb_io_capacity      = 2000
+innodb_flush_method     = O_DIRECT
+
 sql_mode=NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 performance_schema=ON
 connect_timeout=10
-innodb_rollback_on_timeout=1
-wait_timeout=18000
-character-set-server  = utf8mb4 
-collation-server      = utf8mb4_general_ci 
-character_set_server   = utf8mb4
-collation-server = utf8mb4_general_ci
-skip-name-resolve
-max_connections         = 1000
+wait_timeout=1800
+character_set_server  = utf8mb4 
+collation_server      = utf8mb4_general_ci 
+skip_name_resolve     = 1
+max_connections         = 100
 connect_timeout         = 10
 wait_timeout            = 600
 max_allowed_packet      = 256M
@@ -21,19 +30,27 @@ tmp_table_size          = 256M
 max_heap_table_size     = 256M
 myisam_recover_options = BACKUP
 key_buffer_size         = 128M
-open-files-limit       = 2000
-table_open_cache        = 400
-myisam_sort_buffer_size = 512M
 concurrent_insert       = 2
 read_buffer_size        = 2M
 read_rnd_buffer_size    = 1M
 key_cache_segments      = 64
+myisam_sort_buffer_size = 32M
+
 query_cache_limit               = 128K
 query_cache_size                = 0
 query_cache_type                = OFF
-default_storage_engine  = InnoDB
-innodb_log_buffer_size  = 8M
-innodb_file_per_table   = 1
-innodb_open_files       = 400
-innodb_io_capacity      = 2000
-innodb_flush_method     = O_DIRECT
+
+table_definition_cache = 10000
+table_open_cache = 10000
+table_open_cache_instances=8
+metadata_locks_cache_size=10000
+open_files_limit       = 10000
+
+
+#plugins
+plugin_load_add=disks
+plugin_load_add=query_response_time
+plugin_load_add=metadata_lock_info
+
+
+
