add tuning for RocksDB

--- a/mariadb/conf/my.cnf
+++ b/mariadb/conf/my.cnf
@@ -12,6 +12,38 @@ innodb_open_files       = 400
 innodb_io_capacity      = 2000
 innodb_flush_method     = O_DIRECT
 
+# RocksDB
+rocksdb_flush_log_at_trx-commit=2
+rocksdb_allow_concurrent_memtable_write=1
+rocksdb_allow_to_start_after_corruption=1
+rocksdb_db_write_buffer_size=256M
+rocksdb_block_cache_size=2G
+rocksdb_deadlock_detect=1
+rocksdb_delayed_write_rate=167772160
+rocksdb_table_cache_numshardbits=6
+rocksdb_print_snapshot_conflict_queries=ON
+rocksdb_two_write_queues=ON
+rocksdb_wal_recovery_mode=2
+rocksdb_max_total_wal_size = 2G
+rocksdb_compaction_readahead_size=2G
+rocksdb_max_background_jobs=4
+rocksdb_compaction_readahead_size=32M  # Optimisation pour éviter des lectures trop petites
+rocksdb_use_direct_reads=ON
+rocksdb_use_direct_io_for_flush_and_compaction=ON
+rocksdb_skip_fill_cache=ON
+
+# MyIsam
+myisam_recover_options = BACKUP
+key_buffer_size         = 128M
+key_cache_segments      = 64
+myisam_sort_buffer_size = 32M
+
+# Aria and table tmp
+tmp_table_size          = 256M
+max_heap_table_size     = 256M
+
+
+
 sql_mode=NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 performance_schema=ON
 connect_timeout=10
@@ -26,15 +58,9 @@ max_allowed_packet      = 256M
 thread_cache_size       = 128
 sort_buffer_size        = 4M
 bulk_insert_buffer_size = 16M
-tmp_table_size          = 256M
-max_heap_table_size     = 256M
-myisam_recover_options = BACKUP
-key_buffer_size         = 128M
 concurrent_insert       = 2
 read_buffer_size        = 2M
 read_rnd_buffer_size    = 1M
-key_cache_segments      = 64
-myisam_sort_buffer_size = 32M
 
 query_cache_limit               = 128K
 query_cache_size                = 0
