--- a/pmacontrol/Dockerfile
+++ b/pmacontrol/Dockerfile
@@ -5,10 +5,10 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 EXPOSE 80
 WORKDIR /data
 
-ENV PMACONTROL_DB_HOST mariadb
-ENV PMACONTROL_DB_USER root
-ENV PMACONTROL_DB_PASSWORD password
-ENV PMACONTROL_DB_BASE pmacontrol
+ENV PMACONTROL_DB_HOST=mariadb
+ENV PMACONTROL_DB_USER=root
+ENV PMACONTROL_DB_PASSWORD=password
+ENV PMACONTROL_DB_BASE=pmacontrol
 
 # git, unzip & zip are for composer
 RUN apt-get update -qq && \
